<resources>
    <string name="app_name">PONKAN</string>
    <string name="sms_recipient">09171600597</string>
    <string name="central_fire_station_bauer_10">Central Fire Station - Bauer 10</string>
    <string name="central_fire_station_bauer_23">Central Fire Station - Bauer 23</string>
    <string name="central_fire_station_hino">Central Fire Station - Hino</string>
    <string name="central_fire_station_tanker">Central Fire Station - Tanker</string>
    <string name="central_fire_station_ems">Central Fire Station - EMS</string>
    <string name="central_fire_station_srf">Central Fire Station - SRF</string>
    <string name="ayala_fire_sub_station">Ayala Fire Sub-Station</string>
    <string name="boalan_fire_sub_station">Boalan Fire Sub-Station</string>
    <string name="calarian_fire_sub_station">Calarian Fire Sub-Station</string>
    <string name="culianan_fire_sub_station">Culianan Fire Sub-Station</string>
    <string name="guiwan_fire_sub_station">Guiwan Fire Sub-Station</string>
    <string name="labuan_fire_sub_station">Labuan Fire Sub-Station</string>
    <string name="lunzuran_fire_sub_station">Lunzuran Fire Sub-Station</string>
    <string name="mampang_fire_sub_station">Mampang Fire Sub-Station</string>
    <string name="manicahan_fire_sub_station">Manicahan Fire Sub-Station</string>
    <string name="mercedes_fire_sub_station">Mercedes Fire Sub-Station</string>
    <string name="putik_fire_sub_station">Putik Fire Sub-Station</string>
    <string name="quiniput_fire_sub_station">Quiniput Fire Sub-Station</string>
    <string name="recodo_fire_sub_station">Recodo Fire Sub-Station</string>
    <string name="san_jose_gusu_fire_sub_station">San Jose Gusu Fire Sub-Station</string>
    <string name="sangali_fire_sub_station">Sangali Fire Sub-Station</string>
    <string name="sta_catalina_fire_sub_station">Sta Catalina Fire Sub-Station</string>
    <string name="sta_maria_fire_sub_station">Sta Maria Fire Sub-Station</string>
    <string name="talon_talon_fire_sub_station">Talon-Talon Fire Sub-Station</string>
    <string name="talisayan_fire_sub_station">Talisayan Fire Sub-Station</string>
    <string name="tetuan_fire_sub_station">Tetuan Fire Sub-Station</string>
    <string name="tumaga_fire_sub_station">Tumaga Fire Sub-Station</string>
    <string name="vitali_fire_sub_station">Vitali Fire Sub-Station</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="location">Location</string>
    <string name="type_of_incident">Type of Incident</string>
    <string name="responding_team">Responding Team</string>
    <string name="time_and_date_reported">Time and Date Reported</string>
    <string name="involved">Involved</string>
    <string name="alarm_status">Alarm Status</string>
    <string name="time_of_arrival">Time of Arrival</string>
    <string name="fire_out">Fire Out</string>
    <string name="ground_commander">Ground Commander</string>
    <string name="contact_number">Contact Number</string>
    <string name="fire_investigator">Fire Investigator</string>
    <string name="contact_number_initial">Contact Number</string>
    <string name="submit_initial">SUBMIT INITIAL</string>
    <string name="proceed_progress">PROCEED PROGRESS</string>
</resources>